Crashes when placing call from the history
PPP on mobian crashed on 47~rc.1 when placing an outgoing call because
a) The slice model used in the history recreates all the CallsCallRecordRow
widgets (which sounds like a bug in itself) and the signal are not disconnected and
b) the long press gesture used in CallsCallRecordRow
fires "pressed" even though we've only shortly tapped the call button.
when the signal gets emitted the "old" row from the histories slice model will already have been disposed leading to some warnings/criticals from Gtk (about the popover not having a toplevel) and finally a crash by SIGSEGV
.